Fix duplicated test cases